2015-06-30  tino

	* [r10821] CMakeLists.txt, vapply.sh, vparse.sh: Use C++14 where
	  available
	* [r10819] ChangeLog, scripts/profile-revisions.php,
	  src/GrammarApplicator_matchSet.cpp,
	  src/GrammarApplicator_reflow.cpp,
	  src/GrammarApplicator_runContextualTest.cpp,
	  src/GrammarApplicator_runRules.cpp, src/version.hpp: Fix
	  segfault; Further reduce reallocations

2015-06-28  tino

	* [r10817] src/GrammarApplicator_runRules.cpp: Fix segfault
	* [r10815] ChangeLog, src/GrammarApplicator_runRules.cpp,
	  src/version.hpp: Fix removing enclosure owner

2015-06-26  tino

	* [r10811] src/ApertiumApplicator.cpp, src/FSTApplicator.cpp,
	  src/GrammarApplicator_runGrammar.cpp,
	  src/GrammarApplicator_runRules.cpp, src/NicelineApplicator.cpp,
	  src/PlaintextApplicator.cpp, src/Tag.hpp, src/TagTrie.hpp,
	  src/Window.cpp, src/Window.hpp: Eliminate std::list
	* [r10810] src/GrammarApplicator.cpp, src/GrammarApplicator.hpp,
	  src/GrammarApplicator_matchSet.cpp,
	  src/GrammarApplicator_reflow.cpp,
	  src/GrammarApplicator_runContextualTest.cpp,
	  src/GrammarApplicator_runRules.cpp: Regex store as with unif
	* [r10809] src/GrammarApplicator_runRules.cpp: Fix
	* [r10808] src/GrammarApplicator.cpp, src/GrammarApplicator.hpp,
	  src/GrammarApplicator_matchSet.cpp,
	  src/GrammarApplicator_reflow.cpp,
	  src/GrammarApplicator_runContextualTest.cpp,
	  src/GrammarApplicator_runRules.cpp: Let's see if this works...

2015-06-23  tino

	* [r10802] newsletters/2015-06-23.txt: Newsletter
	* [r10800] ChangeLog, src/ApertiumApplicator.cpp,
	  src/FSTApplicator.cpp, src/GrammarApplicator_runGrammar.cpp,
	  src/GrammarApplicator_runRules.cpp, src/NicelineApplicator.cpp,
	  src/PlaintextApplicator.cpp, src/SingleWindow.cpp,
	  src/SingleWindow.hpp, src/Window.cpp, src/version.hpp: Even more
	  pooling
	* [r10799] src/GrammarApplicator_reflow.cpp: More removed cohort
	  badness
	* [r10798] src/inlines.hpp: Demote CR and NEL to just spaces