@@ -264,6 +264,7 @@ namespace CG3 {
 		void delTagFromReading(Reading& reading, Tag *tag);
 		bool unmapReading(Reading& reading, const uint32_t rule);
 		TagList getTagList(const Set& theSet, bool unif_mode = false) const;
+		void getTagList(const Set& theSet, TagList& theTags, bool unif_mode = false) const;
 		void mergeReadings(ReadingList& readings);
 		void mergeMappings(Cohort& cohort);
 		bool isChildOf(const Cohort *child, const Cohort *parent);
